Bug 300209 - Assert in Kate::TextBuffer::removeText
Summary: Assert in Kate::TextBuffer::removeText
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-17 20:41 UTC by Allen Winter
Modified: 2012-05-18 10:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kate backtrace showing assert (6.01 KB, application/octet-stream)
2012-05-17 20:42 UTC, Allen Winter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Allen Winter 2012-05-17 20:41:39 UTC
Kate (via KDevelop) is asserting whenever I save a particular file.

I will attach a backtrace

Reproducible: Always

Steps to Reproduce:
1.load the file. even a recovered version of the file
2. Ctrl-S or select the Save item from the menu
3.
Actual Results:  
asserts

Expected Results:  
doesn't assert
Comment 1 Allen Winter 2012-05-17 20:42:38 UTC
Created attachment 71165 [details]
kate backtrace showing assert
Comment 2 Dominik Haumann 2012-05-18 10:55:57 UTC
Git commit 39da06bc1dbeb07b6e018edcb8ef5434a5c6e35a by Dominik Haumann.
Committed on 18/05/2012 at 12:52.
Pushed by dhaumann into branch 'master'.

correctly implement remove-trailing-spaces on save

@Gregor: one should only use the edit*() functions to modify the document content
@Allen: thanks for the report!
Related: bug 115175

M  +12   -17   part/document/katedocument.cpp
M  +1    -1    part/document/katedocument.h

http://commits.kde.org/kate/39da06bc1dbeb07b6e018edcb8ef5434a5c6e35a