correctly implement remove-trailing-spaces on save

@Gregor: one should only use the edit*() functions to modify the document content
@Allen: thanks for the report!

BUG: 300209
CCBUG: 115175